--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=Passer123
+# DB_HOST=localhost
+# DB_USER=postgres
+# DB_PASSWORD=Passer123
+# DB_NAME=reservation_bus
+# DB_PORT=5432
+# NODE_ENV=development
+
+DB_HOST=dpg-d5sc7orlr7ts738sli60-a
+DB_USER=root
+DB_PASSWORD=BxCYgzg57LMIVZoZ56BsS750sLqcO2LA
 DB_NAME=reservation_bus
 DB_PORT=5432
-NODE_ENV=development
+NODE_ENV=production
