Fix DB_USER to postgres

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 # NODE_ENV=development
 
 DB_HOST=dpg-d5sc7orlr7ts738sli60-a
-DB_USER=root
+DB_USER=postgres
 DB_PASSWORD=BxCYgzg57LMIVZoZ56BsS750sLqcO2LA
 DB_NAME=reservation_bus
 DB_PORT=5432
