--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # DB_PORT=5432
 # NODE_ENV=development
 
-DB_HOST=dpg-d5sc7orlr7ts738sli60-a
+DB_HOST=postgresql://postgres:BxCYgzg57LMIVZoZ56BsS750sLqcO2LA@dpg-d5sc7orlr7ts738sli60-a/reservation_bus
 DB_USER=postgres
 DB_PASSWORD=BxCYgzg57LMIVZoZ56BsS750sLqcO2LA
 DB_NAME=reservation_bus
